# phi2FM

./: .gitignore  Dockerfile_downstream  README.md  environment.yml  individual_arrays.ipynb  pyproject.toml  run_ddp_ccollado.sh  test_ddp.py  training_script.py
args/: args_ddp.yml  args_ddp_phisat2.yml  args_dp.yml  cpu.yml  one_gpu.yml
data_simulation/: README.md  __init__.py
data_simulation/data_phileo-bench/: workflow_download_data.py
data_simulation/data_pretraining/: add_climatezones_to_tiff.py  climate_class_counter.py  (+4 more)
downstream/: README.md  Untitled.ipynb  bash_ccollado.sh  bash_finetuning_burned_area.sh  bash_finetuning_clouds.sh  bash_finetuning_fire.sh  bash_finetuning_worldfloods.sh  bash_izar.sh  bash_phimultigpu.sh  bash_phisat2.sh  bash_training.sh  export_results_csv.py  extract_clouds.py  inference_memory.py  roads_training_script.py  rsync_pretrained_log.txt  training_script.py  training_script_low_latency_tasks.py
models/: geoaware_blocks.py  geoaware_foundation.py  model_CoreCNN.py  model_GeoAwarePretrained.py  uniphi_blocks.py  uniphi_foundation.py  util_tools.py  utils_fm.py
multi_node_ddp/: central_launcher.sh  run_ddp_phimultigpu.sh  run_ddp_phisat2.sh
myriad_2/: Makefile  README.md  calculate_inference_memory.py  check_onnx_shapes.py
other/: README.md  df_simulation.csv  file_counts_256.csv  phileobench_results.ipynb  plot_geolocation_model.ipynb
pretrain/: README.md  bash_newgpu.sh  inference_memory.py  training_script.py
utils/: data_protocol.py  load_data.py  training_loops.py  training_utils.py  utils.py  visualize.py
(+259 files in other folders)
