[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phisatnet"
version = "0.0.1"
authors = [
  { name="Carlos Collado-Capell", email="carlos.colladocapell@epfl.ch" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["pretrain", "downstream", "data_simulation"]
